add close button to code review "add comment" window.

--- a/src/uLearn.Web/Views/Exercise/_ExerciseScoreForm.cshtml
+++ b/src/uLearn.Web/Views/Exercise/_ExerciseScoreForm.cshtml
@@ -6,9 +6,16 @@
 
 <div class="text-muted">Выделите участок кода, чтобы оставить комментарий</div>
 
-<div class="exercise__add-review" style="display: none" data-url="@Url.Action("AddExerciseCodeReview", "Exercise", new { courseId = Model.CourseId, checkingId = Model.Checking.Id })">
+<div class="exercise__add-review" style="display: none"
+	 data-url="@Url.Action("AddExerciseCodeReview", "Exercise", new { courseId = Model.CourseId, checkingId = Model.Checking.Id })">
 	<div class="row">
-		<h4>Добавить комментарий</h4>
+		<h4 class="col-xs-12">
+			Добавить комментарий
+			<a class="exercise__close-review pull-right no-underline" href="#">&times;</a>
+		</h4>
+		
+	</div>
+	<div class="row">
 		<div class="col-sm-6">
 			<textarea class="exercise__add-review__comment"></textarea>
 		</div>
@@ -21,9 +28,9 @@
 </div>
 
 <form method="POST" action="@Url.Action("ScoreExercise", "Exercise", new { recheck = Model.Checking.IsChecked })" class="exercise__score-form">
-	<input type="hidden" name="id" value="@Model.Checking.Id"/>
-	<input type="hidden" name="errorUrl" value="@Url.RouteUrl("Course.SlideById", new { Model.CourseId, slideId = Model.Slide.Url, CheckQueueItemId = Model.Checking.Id, Model.GroupId })&amp;error="/>
-	<input type="hidden" name="nextUrl" value="@Url.Action("ManualExerciseCheckingQueue", "Admin", new { Model.CourseId, Model.GroupId, done = Model.Checking.IsChecked })"/>
+	<input type="hidden" name="id" value="@Model.Checking.Id" />
+	<input type="hidden" name="errorUrl" value="@Url.RouteUrl("Course.SlideById", new { Model.CourseId, slideId = Model.Slide.Url, CheckQueueItemId = Model.Checking.Id, Model.GroupId })&amp;error=" />
+	<input type="hidden" name="nextUrl" value="@Url.Action("ManualExerciseCheckingQueue", "Admin", new { Model.CourseId, Model.GroupId, done = Model.Checking.IsChecked })" />
 
 	<h4>Оцените работу (максимальный балл @block.MaxReviewScore)</h4>
 	<div class="exercise__score">
@@ -48,23 +55,23 @@
 				var otherScoreInputDisplay = Model.Checking.IsChecked ? "" : "display: none";
 			}
 			<input type="number" class="form-control" style="@otherScoreInputDisplay" min="0" max="@block.MaxReviewScore" name="exerciseScore" required="required"
-			       value="@(Model.Checking.IsChecked ? Model.Checking.Score.ToString() : "")"/>
+				   value="@(Model.Checking.IsChecked ? Model.Checking.Score.ToString() : "")" />
 		</div>
 	</div>
 
 	<div class="checkbox checkbox-default">
-		<input data-val="true" id="prohibitFurtherReview" name="prohibitFurtherReview" type="checkbox" value="true" @(Model.Checking.IsChecked && !Model.Checking.ProhibitFurtherManualCheckings ? "" : "checked")/>
+		<input data-val="true" id="prohibitFurtherReview" name="prohibitFurtherReview" type="checkbox" value="true" @(Model.Checking.IsChecked && !Model.Checking.ProhibitFurtherManualCheckings ? "" : "checked") />
 		<label for="prohibitFurtherReview">
 			Не принимать больше код ревью у этого студента
 		</label>
 	</div>
 
-	<input type="submit" class="btn @(Model.Checking.IsChecked ? "btn-primary" : "btn-default")" value="Сохранить и вернуться"/>
+	<input type="submit" class="btn @(Model.Checking.IsChecked ? "btn-primary" : "btn-default")" value="Сохранить и вернуться" />
 
 	@if (!Model.Checking.IsChecked)
 	{
 		<input type="submit" class="btn btn-primary" value="Сохранить и перейти к следующему"
-		       data-url="@Url.Action("CheckNextExerciseForSlide", "Admin", new { Model.CourseId, slideId = Model.Slide.Id, Model.GroupId })"
-		       onclick="$('[name=nextUrl]').val($(this).data('url'))"/>
+			   data-url="@Url.Action("CheckNextExerciseForSlide", "Admin", new { Model.CourseId, slideId = Model.Slide.Id, Model.GroupId })"
+			   onclick="$('[name=nextUrl]').val($(this).data('url'))" />
 	}
 </form>
