--- a/src/uLearn.Web/Views/Exercise/Submission.cshtml
+++ b/src/uLearn.Web/Views/Exercise/Submission.cshtml
@@ -109,7 +109,8 @@
 			if (Model.SubmissionSelectedByUser != null && Model.SubmissionSelectedByUser.AutomaticChecking != null)
 			{
 				var style = Model.ShowOutputImmediately ? "" : "display: none";
-				<div id="exercise__submission__output" style="@style">
+				var isEmpty = string.IsNullOrEmpty(Model.SubmissionSelectedByUser.AutomaticChecking.Output.Text);
+				<div id="exercise__submission__output" class="@(isEmpty ? "empty" : "")" style="@style">
 					@Html.Raw(Html.EncodeMultiLineText(Model.SubmissionSelectedByUser.AutomaticChecking.Output.Text))
 				</div>
 			}
