--- a/src/uLearn.Web/Views/Exercise/_ExerciseScoreForm.cshtml
+++ b/src/uLearn.Web/Views/Exercise/_ExerciseScoreForm.cshtml
@@ -18,13 +18,13 @@
 	<div class="row">
 		<div class="col-sm-6">
 			<textarea class="exercise__add-review__comment"></textarea>
+			<button class="exercise__add-review__button btn btn-success btn-sm mt10">Сохранить</button>
 		</div>
 		<div class="col-sm-6 exercise__add-review__top-comments">
 			<b>Популярные комментарии</b>
 
 		</div>
 	</div>
-	<button class="exercise__add-review__button btn btn-success btn-sm">Сохранить</button>
 </div>
 
 <form method="POST" action="@Url.Action("ScoreExercise", "Exercise", new { recheck = Model.Checking.IsChecked })" class="exercise__score-form">
