--- a/src/uLearn.Web/Views/Analytics/UserSolutions.cshtml
+++ b/src/uLearn.Web/Views/Analytics/UserSolutions.cshtml
@@ -6,19 +6,14 @@
 }
 
 <div class="wide-container">
-	<h2>Решения @Model.User.VisibleName (@Model.User.UserName, @Model.GroupsNames)
-		<small>
-			@Html.ActionLink(Model.Slide.Title, "Slide", "Course", new { courseId = Model.Course.Id, slideIndex = Model.Slide.Index }, null)
-		</small>
+	<h2>
+		@Html.RouteLink(Model.Slide.Title, "Course.SlideById", new { courseId = Model.Course.Id, slideId = Model.Slide.Url }).
+		Решения @Model.User.VisibleName (@Model.User.UserName@(Model.GroupsNames != "" ? ", " + Model.GroupsNames : ""))
 	</h2>
 	<p>
-		@Html.ActionLink("статистика пользователя по курсу", "CourseInfo", "Account", new { userName = Model.User.Id, courseId = Model.Course.Id }, null)
+		@Html.ActionLink("Cтатистика пользователя по всему курсу", "CourseInfo", "Account", new { userName = Model.User.Id, courseId = Model.Course.Id }, null)
 	</p>
-	@foreach (var userSolution in Model.Solutions)
-	{
-		var code = new CodeBlock(userSolution.SolutionCode.Text, Model.Slide.Exercise.LangId);
-		<label>@userSolution.AutomaticChecking.GetVerdict()</label> @userSolution.Timestamp
-		@Html.DisplayFor(m => code)
-		<hr/>
-	}
+	
+	@Html.Action("Submission", "Exercise", new { courseId = Model.Course.Id, slideId = Model.Slide.Id, instructorView = true, onlyAccepted = false, showOutput = true })
+		
 </div>
