--- a/src/uLearn.Web/Views/Course/CourseInstructorNavbar.cshtml
+++ b/src/uLearn.Web/Views/Course/CourseInstructorNavbar.cshtml
@@ -7,11 +7,11 @@
 		<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><span class="glyphicon glyphicon-cog"></span></a>
 		<ul class="dropdown-menu">
 			<li>@Html.ActionLink("Группы", "Groups", "Admin", new { Model.CourseId }, new { })</li>
-			<li>@Html.ActionLink("Статистика", "UnitStatistics", "Analytics", new { Model.CourseId }, new { })</li>
+			<li>@Html.ActionLink("Аналитика", "UnitStatistics", "Analytics", new { Model.CourseId }, new { })</li>
 			@if (User.HasAccessFor(Model.CourseId, CourseRole.CourseAdmin))
 			{
 				<li>@Html.ActionLink("Пользователи", "Users", "Admin", new { Model.CourseId }, new { })</li>
-				<li>@Html.ActionLink("Пакеты", "Packages", "Admin", new { Model.CourseId }, new { })</li>
+				<li>@Html.ActionLink("Загрузить пакет", "Packages", "Admin", new { Model.CourseId }, new { })</li>
 				<li>@Html.ActionLink("Модули", "Units", "Admin", new { Model.CourseId }, new { })</li>
 			}
 			<li class="divider" role="separator"></li>
