--- a/src/uLearn.Web/Views/Course/SlideHtml.cshtml
+++ b/src/uLearn.Web/Views/Course/SlideHtml.cshtml
@@ -32,7 +32,7 @@
 		}
 		else if (context.RevealHidden)
 		{
-			<div class='revealed' data-toggle="tooltip" data-placement="left" title="Этот блок студенты не видят">
+			<div class="revealed" data-toggle="tooltip" data-placement="left" title="Этот блок студенты не видят">
 				@foreach (var block in blockRange)
 				{
 					@Block((dynamic)block, context, Html)
@@ -168,7 +168,7 @@
 
 			if (Html != null)
 			{
-				@Html.Action("Submission", "Exercise", new { courseId = context.Course.Id, slideId = context.Slide.Id, submissionId = context.VersionId, manualCheckingId = manualCheckingId, isLti = data.IsLti })
+				@Html.Action("Submission", "Exercise", new { courseId = context.Course.Id, slideId = context.Slide.Id, submissionId = context.VersionId, manualCheckingId = manualCheckingId, isLti = data.IsLti, instructionView = manualCheckingId != null })
 			}
 			else
 			{
