--- a/src/uLearn.Web/Views/Shared/_LoginPartial.cshtml
+++ b/src/uLearn.Web/Views/Shared/_LoginPartial.cshtml
@@ -8,7 +8,7 @@
 
 		<ul class="nav navbar-nav navbar-right">
 			<li>
-				@Html.ActionLink(User.Identity.GetUserName(), "Manage", "Account", routeValues: null, htmlAttributes: new { title = "Профиль", @class="greating" })
+				@Html.ActionLink(User.Identity.GetUserName(), "Manage", "Account", routeValues: null, htmlAttributes: new { title = "Редактировать профиль", @class = "greating" })
 			</li>
 			<li><a href="javascript:document.getElementById('logoutForm').submit()">Выход</a></li>
 		</ul>
