--- a/src/uLearn.Web/Views/Exercise/Submission.cshtml
+++ b/src/uLearn.Web/Views/Exercise/Submission.cshtml
@@ -120,7 +120,8 @@
 				}
 			}
 
-			if (Model.SubmissionSelectedByUser != null &&
+			if (Model.ManualChecking == null && 
+				Model.SubmissionSelectedByUser != null &&
 				Model.SubmissionSelectedByUser.AutomaticChecking != null &&
 				Model.SubmissionSelectedByUser.AutomaticChecking.Output != null)
 			{
