--- a/src/uLearn.Web/Content/Site.css
+++ b/src/uLearn.Web/Content/Site.css
@@ -75,6 +75,13 @@ input[type="checkbox"].input-validation-error {
 	color: #D8D8D8;
 }
 
+h1 > a:hover,
+h1 > a:active,
+h1 > a:focus {
+	text-decoration: none;
+	border-bottom: 1px solid;
+}
+
 a.no-underline {
 	color: inherit;
 }
