--- a/src/uLearn.Web/Content/Site.css
+++ b/src/uLearn.Web/Content/Site.css
@@ -77,7 +77,10 @@ input[type="checkbox"].input-validation-error {
 
 h1 > a:hover,
 h1 > a:active,
-h1 > a:focus {
+h1 > a:focus,
+h2 > a:hover,
+h2 > a:active,
+h2 > a:focus {
 	text-decoration: none;
 	border-bottom: 1px solid;
 }
