--- a/src/uLearn.Web/Views/Course/SlideHtml.cshtml
+++ b/src/uLearn.Web/Views/Course/SlideHtml.cshtml
@@ -174,6 +174,9 @@
 			{
 				<div class="exercise__submission">
 					<textarea class="code code-exercise hidden" data-lang="@block.LangId">@(block.ExerciseInitialCode.EnsureEnoughLines(4))</textarea>
+					<div class="loading-spinner">
+						<img src="/Content/loading.gif" />
+					</div>
 					@ExerciseControls(new ExerciseControlsModel(context.Course.Id, (ExerciseSlide)context.Slide)
 				   {
 					   IsCodeEditableAndSendable = true,
