--- a/src/uLearn.Web/Views/Admin/Users.cshtml
+++ b/src/uLearn.Web/Views/Admin/Users.cshtml
@@ -20,7 +20,7 @@
 		@using (Html.BeginForm("Users", "Admin", FormMethod.Get, new { @class = "form-inline" }))
 		{
 			<input type="hidden" name="courseId" value="@Model.CourseId"/>
-			<input class="form-control" type="text" name="namePrefix"/>
+			<input class="form-control" type="text" name="namePrefix" value="@Model.NamePrefix"/>
 			<button class="btn btn-primary button" type="submit">Фильтровать по имени</button>
 		}
 	</p>
