--- a/src/uLearn.Web/Views/Home/Index.cshtml
+++ b/src/uLearn.Web/Views/Home/Index.cshtml
@@ -1,79 +1,81 @@
 ﻿@{
 	ViewBag.Title = "Главная";
 }
-<div class="container body-content">
-	<div class="jumbotron">
-		<img src="~/Content/logo.png" class="jumbotron-logo"/>
-		<h1>uLearn</h1>
-		<p class="lead">Интерактивные онлайн курсы по&nbsp;программированию</p>
-		<div class="clearfix"></div>
-	</div>
+<div class="main-page">
+	<div class="container body-content">
+		<div class="jumbotron">
+			<img src="~/Content/logo.png" class="jumbotron-logo"/>
+			<h1>uLearn</h1>
+			<p class="lead">Интерактивные онлайн курсы по&nbsp;программированию</p>
+			<div class="clearfix"></div>
+		</div>
 
-	<div class="row">
-		<div class="course-tile col-md-6">
-			<h2>Основы программирования на примере C#. Часть 1</h2>
-			<p>
-				Длительность курса: 1 семестр, 3–6 часов в неделю.
-			</p>
-			<p>
-				Курс разработан для студентов первого года обучения компьютерных специальностей ИМКН УрФУ.
-				Расcчитан на людей с минимальным опытом программирования.
-			</p>
-			<p>@Html.ActionLink("Поехали!", "Slide", "Course", new { courseId = "BasicProgramming" }, new { @class = "btn btn-primary" })</p>
+		<div class="row">
+			<div class="course-tile col-md-6">
+				<h2>Основы программирования на примере C#. Часть 1</h2>
+				<p>
+					Длительность курса: 1 семестр, 3–6 часов в неделю.
+				</p>
+				<p>
+					Курс разработан для студентов первого года обучения компьютерных специальностей ИМКН УрФУ.
+					Расcчитан на людей с минимальным опытом программирования.
+				</p>
+				<p>@Html.ActionLink("Поехали!", "Slide", "Course", new { courseId = "BasicProgramming" }, new { @class = "btn btn-primary" })</p>
+			</div>
+			<div class="course-tile col-md-6">
+				<h2>Практикум по языку запросов LINQ</h2>
+				<p>
+				Длительность курса: 2–4 часа.
+				<p>
+					Вы познакомитесь с основами LINQ
+					на тщательно подобранных примерах и задачах.
+				</p>
+				<p>
+					Полезно даже тем, кто поверхностно знаком с LINQ.
+				</p>
+				<p>@Html.ActionLink("Поехали!", "Slide", "Course", new { courseId = "Linq" }, new { @class = "btn btn-primary" })</p>
+			</div>
 		</div>
-		<div class="course-tile col-md-6">
-			<h2>Практикум по языку запросов LINQ</h2>
-			<p>
-			Длительность курса: 2–4 часа.
-			<p>
-				Вы познакомитесь с основами LINQ
-				на тщательно подобранных примерах и задачах.
-			</p>
-			<p>
-				Полезно даже тем, кто поверхностно знаком с LINQ.
-			</p>
-			<p>@Html.ActionLink("Поехали!", "Slide", "Course", new { courseId = "Linq" }, new { @class = "btn btn-primary" })</p>
-		</div>
-	</div>
-	<div class="row">
-		<div class="course-tile col-md-6">
-			<h2>Основы программирования на примере C#. Часть 2</h2>
-			<p>Длительность курса: 1 семестр, 3–6 часов в неделю.</p>
-			<p>
-				Курс разработан для студентов первого года обучения компьютерных специальностей ИМКН УрФУ.
-				Расcчитан на людей с минимальным опытом программирования.
-			</p>
-			<p>@Html.ActionLink("Поехали!", "Slide", "Course", new { courseId = "BasicProgramming2" }, new { @class = "btn btn-primary" })</p>
-		</div>
-		<div class="course-tile col-md-6">
-			<h2>Искусственный интеллект и машинное обучение</h2>
-			<p>Длительность: 1 семестр, 1-2 часа в неделю</p>
-			<p>
+		<div class="row">
+			<div class="course-tile col-md-6">
+				<h2>Основы программирования на примере C#. Часть 2</h2>
+				<p>Длительность курса: 1 семестр, 3–6 часов в неделю.</p>
+				<p>
+					Курс разработан для студентов первого года обучения компьютерных специальностей ИМКН УрФУ.
+					Расcчитан на людей с минимальным опытом программирования.
+				</p>
+				<p>@Html.ActionLink("Поехали!", "Slide", "Course", new { courseId = "BasicProgramming2" }, new { @class = "btn btn-primary" })</p>
+			</div>
+			<div class="course-tile col-md-6">
+				<h2>Искусственный интеллект и машинное обучение</h2>
+				<p>Длительность: 1 семестр, 1-2 часа в неделю</p>
+				<p>
 
-			</p>
-			<p>@Html.ActionLink("Поехали!", "Slide", "Course", new { courseId = "AIML" }, new { @class = "btn btn-primary" })</p>
+				</p>
+				<p>@Html.ActionLink("Поехали!", "Slide", "Course", new { courseId = "AIML" }, new { @class = "btn btn-primary" })</p>
+			</div>
 		</div>
-	</div>
-	<div class="row">
-		<div class="course-tile col-md-6">
-			<h2>The Clean Code Game</h2>
-			<p>Длительность: 10–20 минут</p>
-			<p>
-				Небольшая игра-тренажер на интерактивных примерах знакомит с базовыми правилами хорошего кода.
-				Качественные имена, стиль именования, комментарии, разбиение кода на методы.
-			</p>
-			<p>
-				<a class="btn btn-primary" href="https://cleancodegame.github.io">Поехали!</a>
-			</p>
-		</div>
-		<div class="course-tile col-md-6">
-			<h2>Основы компьютерной безопасности</h2>
-			<p>Длительность: 1 семестр, 2–6 часов в неделю</p>
-			<p>
-				Курс разработан для студентов первого и второго года обучения компьютерных специальностей ИМКН УрФУ.
-				Расcчитан на людей с минимальным опытом программирования.
-			</p>
-			<p>@Html.ActionLink("Поехали!", "Slide", "Course", new { courseId = "Hackerdom" }, new { @class = "btn btn-primary" })</p>
+		<div class="row">
+			<div class="course-tile col-md-6">
+				<h2>The Clean Code Game</h2>
+				<p>Длительность: 10–20 минут</p>
+				<p>
+					Небольшая игра-тренажер на интерактивных примерах знакомит с базовыми правилами хорошего кода.
+					Качественные имена, стиль именования, комментарии, разбиение кода на методы.
+				</p>
+				<p>
+					<a class="btn btn-primary" href="https://cleancodegame.github.io">Поехали!</a>
+				</p>
+			</div>
+			<div class="course-tile col-md-6">
+				<h2>Основы компьютерной безопасности</h2>
+				<p>Длительность: 1 семестр, 2–6 часов в неделю</p>
+				<p>
+					Курс разработан для студентов первого и второго года обучения компьютерных специальностей ИМКН УрФУ.
+					Расcчитан на людей с минимальным опытом программирования.
+				</p>
+				<p>@Html.ActionLink("Поехали!", "Slide", "Course", new { courseId = "Hackerdom" }, new { @class = "btn btn-primary" })</p>
+			</div>
 		</div>
 	</div>
 </div>
