--- a/src/uLearn.Web/Views/Analytics/UserSolutions.cshtml
+++ b/src/uLearn.Web/Views/Analytics/UserSolutions.cshtml
@@ -14,6 +14,6 @@
 		@Html.ActionLink("Cтатистика пользователя по всему курсу", "CourseInfo", "Account", new { userName = Model.User.Id, courseId = Model.Course.Id }, null)
 	</p>
 	
-	@Html.Action("Submission", "Exercise", new { courseId = Model.Course.Id, slideId = Model.Slide.Id, submissionId = Model.SubmissionId, instructorView = true, onlyAccepted = false, showOutput = true })
+	@Html.Action("Submission", "Exercise", new { courseId = Model.Course.Id, slideId = Model.Slide.Id, userId = Model.User.Id, submissionId = Model.SubmissionId, instructorView = true, onlyAccepted = false, showOutput = true })
 		
 </div>
