--- a/src/uLearn.Web/Views/Shared/_Layout.cshtml
+++ b/src/uLearn.Web/Views/Shared/_Layout.cshtml
@@ -1,4 +1,6 @@
-﻿<!DOCTYPE html>
+﻿@using uLearn
+@using uLearn.Web.DataContexts
+<!DOCTYPE html>
 <html>
 <head>
 	<meta charset="utf-8" />
@@ -29,22 +31,32 @@
 			</div>
 			<div class="greeting-collapse-class navbar-collapse collapse">
 				<ul class="top-navigation nav navbar-nav">
+					@{
+						var courseManager = WebCourseManager.Instance;
+						var coursesIds = new HashSet<string>(User.GetControllableCoursesId());
+						var courses = courseManager.GetCourses().Where(course => coursesIds.Contains(course.Id)).OrderBy(c => c.Title).ToList();
+					}
 					@if (User.IsSystemAdministrator())
 					{
 						<li class="dropdown">
 							<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Администрирование <span class="caret"></span></a>
 							<ul class="dropdown-menu">
-								<li>@Html.ActionLink("Список курсов", "CourseList", "Admin")</li>
 								<li>@Html.ActionLink("Пользователи", "List", "Account", new { role = LmsRoles.SysAdmin }, null)</li>
 								<li>@Html.ActionLink("Статистика", "SystemStatistics", "Analytics")</li>
 								<li>@Html.ActionLink("Песочница C#", "Index", "Sandbox")</li>
+								<li class="divider"></li>
+								<li class="dropdown-header">Курсы <a href="@Url.Action("CourseList", "Admin")">создать<span class="glyphicon glyphicon-plus"></span></a></li>
+								@CoursesDropdown(courses)
 							</ul>
 						</li>
 					}
 					else if (User.HasAccess(CourseRole.Instructor))
 					{
-						<li>
-							@Html.ActionLink("Мои курсы", "CourseList", "Admin")
+						<li class="dropdown">
+							<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Мои курсы <span class="caret"></span></a>
+							<ul class="dropdown-menu">
+								@CoursesDropdown(courses)
+							</ul>
 						</li>
 					}
 
@@ -65,7 +77,7 @@
 								courseId = Request.Params["courseId"];
 							}
 						}
-						@Html.Action("CourseInstructorNavbar", "Course", new { courseId } );
+						@Html.Action("CourseInstructorNavbar", "Course", new { courseId })
 					}
 				</ul>
 				@Html.Partial("_LoginPartial")
@@ -93,3 +105,15 @@
 	<!-- /Yandex.Metrika counter -->
 </body>
 </html>
+
+@helper CoursesDropdown(List<Course> courses)
+{
+	foreach (var course in courses.Take(10))
+	{
+		<li>@Html.ActionLink(course.Title.TruncateWithEllipsis(40), "UnitStatistics", "Analytics", new { courseId = course.Id }, new { title = course.Title })</li>
+	}
+	if (courses.Count > 10)
+	{
+		<li><b>@Html.ActionLink("Все курсы", "CourseList", "Admin")</b></li>
+	}
+}
